--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-hook-form": "^7.21.2",
     "react-icon": "^1.0.0",
     "react-password-strength-bar": "^0.4.0",
