--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-google-login": "^5.2.2",
     "react-hook-form": "^7.21.2",
     "react-icon": "^1.0.0",
+    "react-icons": "^4.3.1",
     "react-password-checklist": "^1.3.2",
     "react-password-strength-bar": "^0.4.0",
     "react-redux": "^7.2.6",
